--- a/src/recetario/view/Inicio.fxml
+++ b/src/recetario/view/Inicio.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.geometry.*?>
 <?import java.lang.*?>
@@ -8,18 +9,18 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="474.0" prefWidth="642.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="recetario.FXMLDocumentController">
+<AnchorPane id="AnchorPane" prefHeight="474.0" prefWidth="642.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="recetario.controller.Inicio">
    <children>
       <VBox prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <AnchorPane prefHeight="25.0" prefWidth="200.0">
                <children>
-                  <TextField alignment="TOP_RIGHT" maxWidth="150.0" minWidth="0.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0" />
+                  <TextField fx:id="search" alignment="TOP_RIGHT" maxWidth="150.0" minWidth="0.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="10.0" />
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="45.0" prefWidth="200.0">
                <children>
-                  <GridPane alignment="CENTER" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <GridPane alignment="CENTER" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -35,38 +36,47 @@
                                  <font>
                                     <Font size="14.0" />
                                  </font>
+                                 <padding>
+                                    <Insets top="4.0" />
+                                 </padding>
                               </Label>
-                              <ComboBox prefWidth="100.0">
+                              <ComboBox fx:id="categoryFilter" prefWidth="100.0">
                                  <HBox.margin>
-                                    <Insets left="40.0" />
+                                    <Insets left="20.0" />
                                  </HBox.margin>
                               </ComboBox>
                            </children>
                         </HBox>
                         <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1">
                            <children>
-                              <Label text="Categoría: ">
+                              <Label text="Dificultad:">
                                  <font>
                                     <Font size="14.0" />
                                  </font>
+                                 <padding>
+                                    <Insets top="4.0" />
+                                 </padding>
                               </Label>
-                              <ComboBox prefWidth="100.0">
+                              <ComboBox fx:id="levelFilter" prefWidth="100.0">
                                  <HBox.margin>
-                                    <Insets left="40.0" />
+                                    <Insets left="20.0" />
                                  </HBox.margin>
                               </ComboBox>
                            </children>
                         </HBox>
                         <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="2">
                            <children>
-                              <Label text="Categoría: ">
+                              <Label text="Valoración:">
                                  <font>
                                     <Font size="14.0" />
                                  </font>
+                                 <padding>
+                                    <Insets top="4.0" />
+                                 </padding>
                               </Label>
                               <ComboBox prefWidth="100.0">
                                  <HBox.margin>
-                                    <Insets left="40.0" />
+                                    <Insets left="20.0" />
                                  </HBox.margin>
                               </ComboBox>
                            </children>
@@ -80,36 +90,22 @@
             </AnchorPane>
             <AnchorPane prefHeight="150.0" VBox.vgrow="ALWAYS">
                <children>
-                  <ScrollPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                    <content>
-                      <AnchorPane>
+                  <ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                     <content>
+                        <GridPane>
+                           <columnConstraints>
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                           </columnConstraints>
+                           <rowConstraints>
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                           </rowConstraints>
                            <children>
-                              <GridPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                <columnConstraints>
-                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                </columnConstraints>
-                                <rowConstraints>
-                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                </rowConstraints>
-                                 <children>
-                                    <TableView prefHeight="200.0" prefWidth="200.0">
-                                      <columns>
-                                        <TableColumn prefWidth="75.0" text="C1" />
-                                        <TableColumn prefWidth="75.0" text="C2" />
-                                      </columns>
-                                    </TableView>
-                                    <TableView prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
-                                      <columns>
-                                        <TableColumn prefWidth="75.0" text="C1" />
-                                        <TableColumn prefWidth="75.0" text="C2" />
-                                      </columns>
-                                    </TableView>
-                                 </children>
-                              </GridPane>
+                              <ListView fx:id="listView1" focusTraversable="false" prefHeight="200.0" prefWidth="200.0" />
+                              <ListView fx:id="listView2" focusTraversable="false" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" />
                            </children>
-                        </AnchorPane>
-                    </content>
+                        </GridPane>
+                     </content>
                   </ScrollPane>
                </children>
             </AnchorPane>
