--- a/src/recetario/view/Explicacion.fxml
+++ b/src/recetario/view/Explicacion.fxml
@@ -82,14 +82,14 @@
                                                 <Image url="@../../resources/categoria.png" />
                                              </image>
                                           </ImageView>
-                                          <Label text="Primer plato">
+                                          <Label fx:id="tipoPlato" text="Primer plato">
                                              <padding>
                                                 <Insets left="5.0" top="2.0" />
                                              </padding>
                                           </Label>
                                        </children>
                                     </HBox>
-                                    <Button mnemonicParsing="false" text="Editar" GridPane.columnIndex="1" GridPane.halignment="RIGHT">
+                                    <Button fx:id="editarButton" mnemonicParsing="false" text="Editar" GridPane.columnIndex="1" GridPane.halignment="RIGHT">
                                        <GridPane.margin>
                                           <Insets right="20.0" />
                                        </GridPane.margin>
@@ -122,20 +122,41 @@
                     <rowConstraints>
                       <RowConstraints minHeight="10.0" prefHeight="30.0" />
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
                     </rowConstraints>
                      <children>
+                        <Button fx:id="removePaso" mnemonicParsing="false" text="Eliminar paso" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
+                           <GridPane.margin>
+                              <Insets right="30.0" />
+                           </GridPane.margin>
+                        </Button>
                         <Label text="Ingredientes" GridPane.halignment="CENTER">
                            <font>
                               <Font size="24.0" />
                            </font>
                         </Label>
-                        <ListView prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1" />
+                        <ListView fx:id="ingredientesList" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1" />
                         <ListView fx:id="pasosList" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                         <Label text="Forma de preparación" GridPane.columnIndex="1" GridPane.halignment="CENTER">
                            <font>
                               <Font size="24.0" />
                            </font>
                         </Label>
+                        <Button fx:id="addIngrediente" mnemonicParsing="false" text="Añadir ingrediente" GridPane.halignment="LEFT" GridPane.rowIndex="2">
+                           <GridPane.margin>
+                              <Insets left="30.0" />
+                           </GridPane.margin>
+                        </Button>
+                        <Button fx:id="removeIngrediente" mnemonicParsing="false" text="Eliminar ingrediente" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
+                           <GridPane.margin>
+                              <Insets right="30.0" />
+                           </GridPane.margin>
+                        </Button>
+                        <Button fx:id="addPaso" mnemonicParsing="false" text="Añadir paso" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                           <GridPane.margin>
+                              <Insets left="30.0" />
+                           </GridPane.margin>
+                        </Button>
                      </children>
                   </GridPane>
                </children>
