--- a/src/recetario/view/Explicacion.fxml
+++ b/src/recetario/view/Explicacion.fxml
@@ -94,6 +94,11 @@
                                           <Insets right="20.0" />
                                        </GridPane.margin>
                                     </Button>
+                                    <Button fx:id="saveButton" mnemonicParsing="false" text="Guardar" visible="false" GridPane.columnIndex="1" GridPane.halignment="RIGHT">
+                                       <GridPane.margin>
+                                          <Insets right="20.0" />
+                                       </GridPane.margin>
+                                    </Button>
                                  </children>
                                  <columnConstraints>
                                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
