--- a/src/recetario/view/Inicio.fxml
+++ b/src/recetario/view/Inicio.fxml
@@ -17,7 +17,7 @@
                <children>
                   <HBox AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0">
                      <children>
-                        <Button mnemonicParsing="false" text="Nueva receta" />
+                        <Button fx:id="newReceta" mnemonicParsing="false" text="Nueva receta" />
                         <Button mnemonicParsing="false" onAction="#doImport" text="Importar receta">
                            <HBox.margin>
                               <Insets left="10.0" />
