--- a/src/recetario/view/Explicacion.fxml
+++ b/src/recetario/view/Explicacion.fxml
@@ -33,6 +33,7 @@
                                     <Insets bottom="20.0" />
                                  </StackPane.margin>
                               </Circle>
+                              <Button fx:id="elegirImagen" mnemonicParsing="false" text="Elegir..." />
                            </children>
                         </StackPane>
                         <AnchorPane maxWidth="1.7976931348623157E308" prefWidth="200.0" HBox.hgrow="ALWAYS">
@@ -55,12 +56,13 @@
                                                 <Insets top="1.0" />
                                              </HBox.margin>
                                           </ImageView>
-                                          <Label fx:id="time" text="5">
+                                          <TextField fx:id="time" disable="true" maxWidth="40.0">
                                              <HBox.margin>
-                                                <Insets left="5.0" />
+                                                <Insets left="5.0" right="5.0" />
                                              </HBox.margin>
-                                          </Label>
-                                          <TextField fx:id="timeEdit" maxWidth="0.0" visible="false" />
+                                             <padding>
+                                                <Insets top="2.0" />
+                                             </padding></TextField>
                                           <Label text="minutos">
                                              <HBox.margin>
                                                 <Insets />
@@ -75,13 +77,14 @@
                                                 <Image url="@../../resources/fork.png" />
                                              </image>
                                           </ImageView>
-                                          <Label fx:id="people" text="1">
+                                          <TextField fx:id="people" disable="true" maxWidth="40.0">
                                              <HBox.margin>
-                                                <Insets left="5.0" />
+                                                <Insets left="5.0" right="5.0" />
                                              </HBox.margin>
-                                          </Label>
-                                          <TextField fx:id="peopleEdit" maxWidth="0.0" visible="false" />
-                                          <Label text="comensal" />
+                                             <padding>
+                                                <Insets top="2.0" />
+                                             </padding></TextField>
+                                          <Label text="comensales" />
                                        </children>
                                     </HBox>
                                     <HBox prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="3">
