--- a/src/recetario/view/Celda.fxml
+++ b/src/recetario/view/Celda.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <HBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -43,7 +43,7 @@
                      <children>
                         <Label fx:id="name" text="Título de la receta">
                            <font>
-                              <Font name="System Bold" size="13.0" />
+                              <Font name="Avenir Black" size="13.0" />
                            </font></Label>
                         <HBox prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="1">
                            <children>
@@ -59,6 +59,9 @@
                                  <HBox.margin>
                                     <Insets left="5.0" />
                                  </HBox.margin>
+                                 <font>
+                                    <Font name="Avenir Roman" size="13.0" />
+                                 </font>
                               </Label>
                            </children>
                         </HBox>
@@ -73,6 +76,9 @@
                                  <HBox.margin>
                                     <Insets left="5.0" />
                                  </HBox.margin>
+                                 <font>
+                                    <Font name="Avenir Roman" size="13.0" />
+                                 </font>
                               </Label>
                            </children>
                         </HBox>
@@ -85,8 +91,14 @@
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                           </rowConstraints>
                            <children>
-                              <Button fx:id="open" alignment="CENTER" mnemonicParsing="false" text="Abrir" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
-                              <Button fx:id="delete" mnemonicParsing="false" text="Eliminar" GridPane.halignment="CENTER" />
+                              <Button fx:id="open" alignment="CENTER" mnemonicParsing="false" text="Abrir" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+                                 <font>
+                                    <Font name="Avenir Roman" size="13.0" />
+                                 </font></Button>
+                              <Button fx:id="delete" mnemonicParsing="false" text="Eliminar" GridPane.halignment="CENTER">
+                                 <font>
+                                    <Font name="Avenir Roman" size="13.0" />
+                                 </font></Button>
                            </children>
                            <GridPane.margin>
                               <Insets top="10.0" />
@@ -95,6 +107,9 @@
                      </children>
                   </GridPane>
                </children>
+               <HBox.margin>
+                  <Insets left="15.0" />
+               </HBox.margin>
             </AnchorPane>
          </children>
       </HBox>
